[package]
name = "tproxy-config"
version = "6.0.3"
edition = "2021"
description = "Transparent proxy configuration"
license = "MIT"
authors = ["@ssrlive"]
repository = "https://github.com/ssrlive/tproxy-config"
keywords = ["tun", "network", "tunnel", "transparent", "proxy"]
readme = "readme.md"

[features]
default = []
unsafe-state-file = []

[dependencies]
cidr = { version = "0.2", features = ["serde"] }
log = { version = "0.4" }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "macos")'.dependencies]
resolv-conf = "0.7"
system-configuration = "0.6"

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["fs", "mount", "process"] }
tempfile = "3"
