[package]
name = "tproxy-config"
version = "7.0.4"
edition = "2024"
description = "Transparent proxy configuration"
license = "MIT"
authors = ["@ssrlive"]
repository = "https://github.com/ssrlive/tproxy-config"
keywords = ["tun", "network", "tunnel", "transparent", "proxy"]
readme = "readme.md"

[features]
unsafe-state-file = []

# default = ["unsafe-state-file"]

[dependencies]
cidr = { version = "0.3", features = ["serde"] }
futures = "0.3.31"
libloading = "0.8"
log = { version = "0.4" }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt"] }

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.30", features = ["fs", "mount", "process"] }
rtnetlink = "0.18"
tempfile = "3"

[target.'cfg(target_os = "macos")'.dependencies]
resolv-conf = "0.7"
system-configuration = "0.6"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.60", features = [
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemServices",
    "Win32_Security_Cryptography",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinSock",
    "Win32_System_Threading",
    "Win32_System_Com",
    "Win32_System_Rpc",
    "Win32_Security",
    "Win32_Foundation",
    "Win32_System_Ioctl",
    "Win32_System_IO",
    "Win32_System_LibraryLoader",
    "Win32_Security_WinTrust",
] }
