[package]
name = "tproxy-config"
version = "7.0.7"
edition = "2024"
description = "Transparent proxy configuration"
license = "MIT"
authors = ["@ssrlive"]
repository = "https://github.com/ssrlive/tproxy-config"
keywords = ["tun", "network", "tunnel", "transparent", "proxy"]
readme = "readme.md"

[features]
unsafe-state-file = []

# default = ["unsafe-state-file"]

[dependencies]
cidr = { version = "0.3.2", features = ["serde"] }
futures = "0.3.33"
libloading = "0.9.0"
log = { version = "0.4.33" }
regex = "1.13.1"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
tokio = { version = "1.53.1", features = ["rt"] }

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.31.3", features = ["fs", "mount", "process"] }
rtnetlink = "0.21.0"
tempfile = "3.27.0"

[target.'cfg(target_os = "macos")'.dependencies]
resolv-conf = "0.7.6"
system-configuration = "0.7.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemServices",
    "Win32_Security_Cryptography",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinSock",
    "Win32_System_Threading",
    "Win32_System_Com",
    "Win32_System_Rpc",
    "Win32_Security",
    "Win32_Foundation",
    "Win32_System_Ioctl",
    "Win32_System_IO",
    "Win32_System_LibraryLoader",
    "Win32_Security_WinTrust",
] }
